--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,5 +22,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.squareup.okhttp:okhttp:2.4.0'
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
 }
