--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,7 @@
 
         <service android:enabled="true" android:name="com.example.santiago.http.service.HttpService" />
 
-        <activity android:name="com.example.santiago.testings.activity.MActivity"
-            android:screenOrientation="portrait" >
+        <activity android:name="com.example.santiago.testings.activity.MActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
