--- a/testing/build.gradle
+++ b/testing/build.gradle
@@ -23,4 +23,13 @@ dependencies {
     compile fileTree(dir: 'libs')
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile project(path: ':HttpBusLib')
+    compile "com.saantiaguilera:EventsLib:$eventLibVersion"
+}
+
+repositories {
+    mavenCentral()
+    maven {
+        //Since bintray hasnt already publish it
+        url  "http://dl.bintray.com/saantiaguilera/maven"
+    }
 }
