--- a/HttpBusLib/build.gradle
+++ b/HttpBusLib/build.gradle
@@ -1,8 +1,4 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.github.dcendents.android-maven'
-apply plugin: "com.jfrog.bintray"
-
-version = "1.0.4"
 
 android {
     compileSdkVersion 24
@@ -35,85 +31,4 @@ dependencies {
     javadocDeps 'com.android.support:support-annotations:24.0.0'
 }
 
-def siteUrl = 'https://github.com/saantiaguilera/android-api-http-requests'
-def gitUrl = 'https://github.com/saantiaguilera/android-api-http-requests.git'
-group = "com.saantiaguilera"
-
-install {
-    repositories.mavenInstaller {
-        pom {
-            project {
-                packaging 'aar'
-
-                name 'com.saantiaguilera:HttpBusLib'
-                description = 'OkHttp Wrapper with some sugar + EventBus'
-                url siteUrl
-
-                licenses {
-                    license {
-                        name 'MIT'
-                    }
-                }
-                developers {
-                    developer {
-                        id 'saantiaguilera'
-                        name 'Santiago Aguilera'
-                        email 'marquito.santi@gmail.com'
-                    }
-                }
-                scm {
-                    connection gitUrl
-                    developerConnection gitUrl
-                    url siteUrl
-                }
-            }
-        }
-    }
-}
-
-task sourcesJar(type: Jar) {
-    from android.sourceSets.main.java.srcDirs
-    classifier = 'sources'
-}
-
-task javadoc(type: Javadoc) {
-    source = android.sourceSets.main.java.srcDirs
-    classpath += configurations.javadocDeps
-    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
-
-    failOnError false
-}
-
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
-    from javadoc.destinationDir
-}
-
-artifacts {
-    archives javadocJar
-    archives sourcesJar
-}
-
-Properties properties = new Properties()
-properties.load(project.rootProject.file('local.properties').newDataInputStream())
-
-bintray {
-    user = properties.getProperty("bintray.user")
-    key = properties.getProperty("bintray.apikey")
-
-    configurations = ['archives']
-    pkg {
-        repo = "maven"
-        name = "com.saantiaguilera:HttpBusLib"
-        websiteUrl = siteUrl
-        vcsUrl = gitUrl
-        licenses = ['MIT']
-        publish = true
-        version {
-            gpg {
-                sign = true
-                passphrase = properties.getProperty("bintray.gpg.password")
-            }
-        }
-    }
-}
+apply from: 'publish.gradle'
